--- a/pg_disertation/requirements.txt
+++ b/pg_disertation/requirements.txt
@@ -1,6 +1,5 @@
-Flask==2.3.3
-pdfplumber
-scikit-learn
-numpy
-pytesseract
-pdf2image
+Flask==3.1.2
+pdf2image==1.17.0
+pdfplumber==0.11.7
+pytesseract==0.3.13
+scikit_learn==1.7.2
